@@ -31,7 +31,7 @@ For detailed information about Sitemaps see
 
 <div id="body">
 
-<p><strong>Please do read this documentation! Support might not be given otherwise.
+<p><strong>Please do read this documentation!
 It's generally a good idea to read the documentation,
 <em>before</em> you encounter any problems!</strong></p>
 
@@ -103,14 +103,19 @@ For details on this settings, see
 <p>Sitemapper_XH will only list the actual pages of CMSimple_XH's content.
 Additional content that is managed by plugins, e.g. forums or blogs,
 will not be included to the Sitemap file.</p>
+<p>When pages are added or deleted from the editor,
+the generated sitemap files are not correct,
+unless the content is saved again from the editor.
+As workaround just save the page again directly after adding or deleting a page.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="license">License</a></h2>
 <p>Sitemapper_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
-<p>Czech translation &copy; 2011 Josef Němec<br>
-Polish translation &copy; 2012 Kamill Krzes</p>
+<p>Czech translation &copy; 2011-2012 Josef Němec<br>
+Polish translation &copy; 2012 Kamill Krzes<br>
+Slovak translation &copy; 2012 Dr. Martin Sereday</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
@@ -121,9 +126,12 @@ Many thanks for publishing this icon as freeware.</p>
 Many thanks for making these icons freely available.</p>
 <p>Many thanks to the community at the <a href="http://www.cmsimpleforum.com">CMSimple forum</a>
 for tips, suggestions and testing.
-Particularly I want to thank Ulrich for being the first beta tester of Sitemapper_XH.</p>
-<p>And many thanks to all developers of <a href="http://www.cmsimple-xh.com">
-CMSimple_XH</a> without whom this amazing CMS wouldn't exist.</p>
+Particularly I want to thank Ulrich for being the first beta tester of Sitemapper_XH.
+And many thanks to sareide, who detected a severe bug
+regarding the URLs of subsite/second language pages.</p>
+<p>Last but not least many thanks to <a href="http://www.harteg.dk">Peter Harteg</a>,
+the "father" of CMSimple, and all developers of <a href="http://www.cmsimple-xh.com">
+CMSimple_XH</a>, without whom this amazing CMS wouldn't exist.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 </div>
