@@ -32,7 +32,6 @@ Ausführliche Information über Sitemaps erhalten Sie unter
 <div id="body">
 
 <p><strong>Bitte lesen Sie diese Dokumentation!
-Andernfalls wird möglicherweise kein Support gewährt.
 Es ist grundsätzlich eine gute Idee, die Dokumentation zu lesen,
 <em>bevor</em> Sie auf Probleme stoßen!</strong></p>
 
@@ -104,14 +103,20 @@ Ausführliche Erläuterungen zu diesen Einstellungen, finden Sie unter
 <p>Sitemapper_XH wird nur die eigentlichen Seiten des CMSimple Inhalts auflisten.
 Zusätzliche Inhalte, die von Plugins verwaltet werden, z.B. Foren oder Blogs,
 werden nicht in die Sitemap-Datei aufgenommen.</p>
+<p>Wenn Seiten im Editor hinzugefügt oder gelöscht werden,
+sind die erzeugten Sitemap-Dateien nicht korrekt
+solange bis der Content erneut gespeichert wird.
+Als Workaround speichern Sie die Seite direkt noch ein weiteres mal
+nachdem Sie eine Seite hinzugefügt oder gelöscht haben.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="license">Lizenz</a></h2>
 <p>Sitemapper_XH kann unter Einhaltung der
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
-<p>Tscheschiche Übersetzung &copy; 2011 Josef Němec<br>
-Polnische Übersetzung &copy; 2012 Kamill Krzes</p>
+<p>Tscheschiche Übersetzung &copy; 2011-2012 Josef Němec<br>
+Polnische Übersetzung &copy; 2012 Kamill Krzes<br>
+Slovakische Übersetzung &copy; 2012 Dr. Martin Sereday</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Danksagung</a></h2>
@@ -122,8 +127,11 @@ Vielen Dank für die Veröffentlichung als Freeware.</p>
 Vielen Dank für die freie Verwendbarkeit dieser Icons.</p>
 <p>Vielen Dank an die Gemeinschaft im <a href="http://www.cmsimpleforum.com">CMSimple-Forum</a>
 für Tipps, Anregungen und das Testen.
-Besonders möchte ich Ulrich danken, dass er der erste Beta-Tester von Sitemapper_XH war.</p>
-<p>Und natürlich vielen Dank allen Entwicklern von <a href="http://www.cmsimple-xh.de">CMSimple_XH</a>,
+Besonders möchte ich Ulrich danken, dass er der erste Beta-Tester von Sitemapper_XH war.
+Und vielen Dank an sareide, der einen schweren Fehler bezüglich der URLs
+von Subsite/Zweitsprachen-Seiten entdeckt hat.</p>
+<p>Zu guter letzt vielen Dank an <a href="http://www.harteg.dk">Peter Harteg</a>
+und allen Entwicklern von <a href="http://www.cmsimple-xh.de">CMSimple_XH</a>,
 ohne die dieses fantastische CMS nicht existieren würde.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
