@@ -1,0 +1,17 @@
+<?php
+
+$plugin_tx['sitemapper']['utf-8-marker']="äöüßě";
+$plugin_tx['sitemapper']['menu_main']="Sitemaps";
+$plugin_tx['sitemapper']['syscheck_title']="Kontrola systému";
+$plugin_tx['sitemapper']['syscheck_phpversion']="PHP verze ≥ %s";
+$plugin_tx['sitemapper']['syscheck_extension']="Rozšíření '%s' spuštěno";
+$plugin_tx['sitemapper']['syscheck_magic_quotes']="magic_quotes_runtime off";
+$plugin_tx['sitemapper']['syscheck_encoding']="Kódovaní 'UTF-8' nastaveno";
+$plugin_tx['sitemapper']['syscheck_writable']="'%s' zapisovatelné";
+$plugin_tx['sitemapper']['cf_utf-8-marker']="systémové nastavení. <strong>NEMĚNIT!</strong>";
+$plugin_tx['sitemapper']['cf_canonical_hostname']="Jméno hostingu, např. \"www.example.com\" nebo \"example.com\".";
+$plugin_tx['sitemapper']['cf_changefreq']="Jak často se má stránka může změnit. Tato hodnota obsahuje obecné informace do vyhledávačů a určuje přesně jak často se budou procházet stránky. Platné hodnoty jsou: \"always\" (vždy), \" hourly\" (hodinově), \"daily\" (denně), \"weekly\" (týdně), \"monthly\" (měsíčně), \"yearly\" (ročně) a \"never\" (nikdy). UPOZORNĚNÍ! V konfiguraci musíte použít anglický název, např. \"daily\". Český název nebude akceptován.";
+$plugin_tx['sitemapper']['cf_priority']="Prioritní URL ve vztahu k ostatním URL na vašich stránkách. Platné hodnoty jsou v rozmezí od 0.0 do 1.0.";
+$plugin_tx['sitemapper']['cf_ignore_hidden_pages']="Vyloučit skryté stránky z mapy stránek? \"1\" (znamená ANO) nebo \"0\" (znamená NE)";
+
+?>
