@@ -1,0 +1,24 @@
+<?php
+
+/*
+ * Copyright (c) 2012 Dr. Martin Sereday - www.cmsimple.sk - info(at)cmsimple.sk
+ *
+ * This work is licensed under a Creative Commons Attribution 3.0 Unported
+ * License.
+ */
+
+$plugin_tx['sitemapper']['utf-8-marker']="äöüßľščťžýáíéňôß";
+$plugin_tx['sitemapper']['menu_main']="Mapy stránok";
+$plugin_tx['sitemapper']['syscheck_title']="Kontrola systému";
+$plugin_tx['sitemapper']['syscheck_phpversion']="PHP verzia ≥ %s";
+$plugin_tx['sitemapper']['syscheck_extension']="Rozšírenie '%s' načítané";
+$plugin_tx['sitemapper']['syscheck_magic_quotes']="magic_quotes_runtime off";
+$plugin_tx['sitemapper']['syscheck_encoding']="Kódovanie 'UTF-8' nastavené";
+$plugin_tx['sitemapper']['syscheck_writable']="'%s' umožňuje zápis";
+$plugin_tx['sitemapper']['cf_utf-8-marker']="Iba pre vnútorné použitie. <strong>Nič nemeňte!</strong>";
+$plugin_tx['sitemapper']['cf_canonical_hostname']="Názov hostu, ktorý sa má použiť v súboroch máp, napr. \"www.example.com\" alebo \"example.com\".";
+$plugin_tx['sitemapper']['cf_changefreq']="Aká je predpokladaná frekvencia zmien na stránke? Toto je základná informácia pre vyhľadávače. Nemusí byť úplne presná, orientačne informu o tom, ako často sa majú prezerať stránky. Platné hodnoty sú: \"always\", \"hourly\", \"daily\", \"weekly\", \"monthly\", \"yearly\" a \"never\".";
+$plugin_tx['sitemapper']['cf_priority']="Priorita tejto URL relatívna voči iným URL na tejto stránke. Platný je rozsah od 0.0 do 1.0.";
+$plugin_tx['sitemapper']['cf_ignore_hidden_pages']="Vylúčiť zo sledovania skryté stránky? \"1\" (znamená áno) alebo \"0\" (znamená nie)";
+
+?>
